playbook/roles/bookinfo/templates/datadog-apm/apline-cli.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
---
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  namespace: bookinfo
spec:
  containers:
  - image: alpine:3.13
    command:
      - /bin/sh
      - "-c"
      - "sleep 600m"
    imagePullPolicy: IfNotPresent
    name: alpine
  restartPolicy: Always
