playbook/roles/bookinfo/templates/datadog-apm/bookinfo-ratings.yaml
##################################################################################################
# Ratings service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: bookinfo
  labels:
    app: ratings
    service: ratings
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v1
  labels:
    tags.datadoghq.com/env: "dev"
    tags.datadoghq.com/service: "ratings"
    tags.datadoghq.com/version: "v1"
    app: ratings
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v1
  template:
    metadata:
      labels:
        tags.datadoghq.com/env: "dev"
        tags.datadoghq.com/service: "ratings"
        tags.datadoghq.com/version: "v1"
        admission.datadoghq.com/enabled: "true"
        app: ratings
        version: v1
      annotations:
        admission.datadoghq.com/js-lib.version: v3.17.1
    spec:
      serviceAccountName: bookinfo-ratings
      containers:
      - name: ratings
        image: docker.io/istio/examples-bookinfo-ratings-v1:1.17.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
